made server port configurable

--- a/spring-boot/src/main/resources/application.properties
+++ b/spring-boot/src/main/resources/application.properties
@@ -9,3 +9,6 @@ mockbin.id=223b8fdd-549f-4eb6-8fba-94cbc768fa61
 #poll.periodInMs=60000
 # Every five seconds
 poll.periodInMs=5000
+
+# Port through which application is accessible
+server.port=8080
